--- a/eclipse/TomCat_Oracle/.project
+++ b/eclipse/TomCat_Oracle/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Primeros_pasos_JSP</name>
+	<name>TomCat_Oracle</name>
 	<comment></comment>
 	<projects>
 	</projects>
